docs: add 'available since' tips to features

--- a/docs/versioned_docs/version-2.x/tutorials/LayoutAnimations/animated_list.mdx
+++ b/docs/versioned_docs/version-2.x/tutorials/LayoutAnimations/animated_list.mdx
@@ -19,6 +19,12 @@ import Entering from '@site/static/img/tutorial/layoutAnimations/entering.gif';
 import Layout from '@site/static/img/tutorial/layoutAnimations/layout.gif';
 import After from '@site/static/img/tutorial/layoutAnimations/after.gif';
 
+:::tip
+
+Layout Animations are available since v2.3.0
+
+:::
+
 This tutorial will help you make your screens and components more smooth by adding animations.
 We will use a new feature from the Reanimated library - Layout Animations which lets us animate:
 * components appearance
