--- a/docs/versioned_docs/version-2.x/api/miscellaneous/interpolateColors.mdx
+++ b/docs/versioned_docs/version-2.x/api/miscellaneous/interpolateColors.mdx
@@ -28,7 +28,7 @@ Can be either `'RGB'` or `'HSV'`.
 
 #### `options` [Object]
 
-Object containg color interpolation options. Allowed parameters are listed below:
+Object containing color interpolation options. Allowed parameters are listed below:
 
 | Options                      | Default | Description                                             |
 | ---------------------------- | ------- | ------------------------------------------------------- |
