--- a/docs/docs/guide/debugging.mdx
+++ b/docs/docs/guide/debugging.mdx
@@ -96,7 +96,7 @@ means that this piece of code:
 ```js
 function runWorklet() {
   'worklet';
-  console.log('worklet:', _WORKLET);
+  console.log('worklet:', ReanimatedIsUIRuntime);
 }
 runOnUI(runWorklet)();
 ```
