--- a/docs/docs/layout-animations/entering-exiting-animations.mdx
+++ b/docs/docs/layout-animations/entering-exiting-animations.mdx
@@ -6,7 +6,7 @@ sidebar_position: 1
 
 Entering/Exiting animations let you animate elements when they are added to or removed from the view hierarchy.
 
-Reanimated comes with a bunch of predefined animations you can customize. For more advanced use-cases, you can use [Keyframes](/) or create your own [custom entering/exiting animations](/).
+Reanimated comes with a bunch of predefined animations you can customize. For more advanced use-cases, you can use [Keyframes](/docs/layout-animations/keyframe-animations) or create your own [custom entering/exiting animations](/docs/layout-animations/custom-animations).
 
 ## Fade
 
