--- a/docs/docs/threading/runOnUI.mdx
+++ b/docs/docs/threading/runOnUI.mdx
@@ -2,7 +2,7 @@
 
 `runOnUI` lets you asynchronously run [workletized](/docs/fundamentals/glossary#to-workletize) functions on the [UI thread](/docs/fundamentals/glossary#ui-thread).
 
-Most commonly used either with an `useEffect` to start an animation on component mount/unmount or with [`measure`](/docs/advanced/measure) and [`scrollTo`](/) functions which have implementations only on the UI thread.
+Most commonly used either with an `useEffect` to start an animation on component mount/unmount or with [`measure`](/docs/advanced/measure) and [`scrollTo`](/docs/scroll/scrollTo) functions which have implementations only on the UI thread.
 
 ## Reference
 
@@ -59,7 +59,7 @@ import RunOnUISrc from '!!raw-loader!@site/src/examples/RunOnUI';
 
 ## Remarks
 
-- When implementing your animations you should first reach for more general solutions such as [`useDerivedValue`](/), [`useAnimatedReaction`](/docs/advanced/useAnimatedReaction) or running code in gesture callbacks and only use `runOnUI` after you've tried other methods.
+- When implementing your animations you should first reach for more general solutions such as [`useDerivedValue`](/docs/core/useDerivedValue), [`useAnimatedReaction`](/docs/advanced/useAnimatedReaction) or running code in gesture callbacks and only use `runOnUI` after you've tried other methods.
 
 - It's a common mistake to execute function inside of runOnUI like this: ~~`runOnUI(myWorklet(10))()`~~. Here, the correct usage would be `runOnUI(myWorklet)(10)`.
 
