--- a/docs/docs/animations/withTiming.mdx
+++ b/docs/docs/animations/withTiming.mdx
@@ -79,7 +79,7 @@ import TimingEasingCompareSrc from '!!raw-loader!@site/src/examples/TimingEasing
 
 Reanimated provides a handful of ready-to-use easing functions in the `Easing` module. You can find a visualization of some common easing functions at [http://easings.net/](http://easings.net/).
 
-You use our built-in easings by passing them as `easing` property to `withTiming` config:
+You can use our built-in easings by passing them as the `easing` property to the `withTiming` config:
 
 ```javascript
 import { Easing } from 'react-native-reanimated';
