--- a/docs/docs/animations/withTiming.mdx
+++ b/docs/docs/animations/withTiming.mdx
@@ -77,7 +77,7 @@ import TimingEasingCompareSrc from '!!raw-loader!@site/src/examples/TimingEasing
   component={<TimingEasingCompare />}
 />
 
-Reanimated provides a handful of ready-to-use easing functions in the `Easing` module. You can find a visualization of some common easing functions at [http://easings.net/](http://easings.net/).
+Reanimated provides a selection of ready-to-use easing functions in the `Easing` module. You can find a visualization of some common easing functions at [http://easings.net/](http://easings.net/).
 
 You can use our built-in easings by passing them as the `easing` property to the `withTiming` config:
 
