--- a/docs/docs/animations/withTiming.mdx
+++ b/docs/docs/animations/withTiming.mdx
@@ -67,7 +67,7 @@ Available properties:
 
 The `easing` parameter lets you fine-tine the animation over the specified time duration. For example, you can make the animation begin with fast acceleration and then slow it down towards the end, or start slowly then pick up some speed before slowing down again towards the end.
 
-It all will start to make sense when you compare side by side a `linear` easing with the default `Easing.inOut(Easing.quad)` easing.
+It will all start to make sense when you compare a `linear` easing side by side with the default `Easing.inOut(Easing.quad)` easing.
 
 import TimingEasingCompare from '@site/src/examples/TimingEasingCompare';
 import TimingEasingCompareSrc from '!!raw-loader!@site/src/examples/TimingEasingCompare';
