--- a/docs/docs/animations/withTiming.mdx
+++ b/docs/docs/animations/withTiming.mdx
@@ -65,7 +65,7 @@ Available properties:
 
 ##### `Easing`
 
-The `easing` parameter lets you fine-tine the animation over the specified time duration. For example, you can make the animation begin with fast acceleration and then slow it down towards the end, or start slowly then pick up some speed before slowing down again towards the end.
+The `easing` parameter lets you fine-tune the animation over the specified time duration. For example, you can make the animation begin with fast acceleration and then slow down towards the end, or start slowly, then pick up speed before slowing down again towards the end.
 
 It will all start to make sense when you compare a `linear` easing side by side with the default `Easing.inOut(Easing.quad)` easing.
 
