--- a/docs/docs/advanced/useFrameCallback.mdx
+++ b/docs/docs/advanced/useFrameCallback.mdx
@@ -62,7 +62,7 @@ function useFrameCallback(
 
 #### `callback`
 
-A function to be executed on every frame update. This function receives a `frameInfo` object containing fields:
+A function executed on every frame update. This function receives a `frameInfo` object containing the following fields:
 
 - `timestamp` a number indicating the system time (in milliseconds) when the last frame was rendered.
 - `timeSincePreviousFrame` a number indicating the time (in milliseconds) since last frame. This value will be null on the first frame after activation. Starting from the second frame, it should be ~16 ms on 60 Hz, and ~8 ms on 120 Hz displays (provided there are no frame dropped).
