--- a/docs/docs/advanced/useAnimatedReaction.mdx
+++ b/docs/docs/advanced/useAnimatedReaction.mdx
@@ -4,7 +4,7 @@ sidebar_position: 2
 
 # useAnimatedReaction
 
-`useAnimatedReaction` lets you react to a change of a [shared value](/docs/fundamentals/glossary#shared-value). Especially useful when comparing values previously stored in shared value with the current one.
+`useAnimatedReaction` allows you to respond to changes in a [shared value](/docs/fundamentals/glossary#shared-value). It's especially useful when comparing values previously stored in the shared value with the current one.
 
 ## Reference
 
@@ -46,7 +46,7 @@ function useAnimatedReaction<T>(
 
 #### `prepare`
 
-A function that has to return a value you'd like to react to the changes of. A value returned from this function is used as a first parameter of the `react` argument.
+A function that should return a value to which you'd like to react. The value returned from this function is used as the first parameter of the `react` argument.
 
 ```jsx
 function App() {
@@ -65,7 +65,7 @@ function App() {
 
 #### `react`
 
-A function that reacts to the change of a value returned by the `prepare` function. The `react` function comes with 2 parameters: the current value returned from the `prepare` function and the previous value which is initially set to `null`.
+A function that reacts to changes in the value returned by the `prepare` function. The `react` function has two parameters: the current value from the `prepare` function and the previous value, which is initially set to `null`.
 
 ```jsx
 function App() {
@@ -104,7 +104,7 @@ import AnimatedReactionMeasureSrc from '!!raw-loader!@site/src/examples/Animated
 
 ## Remarks
 
-- Make sure not to mutate the same shared value in the `result` function that you've used in the `prepare` function as this will cause an infinite loop.
+- Ensure you do not mutate the same shared value in the `result` function that you've used in the `prepare` function, as this will lead to an infinite loop.
 
 <Indent>
 
@@ -126,9 +126,9 @@ function App() {
 
 </Indent>
 
-- Callbacks passed to `prepare` and `result` arguments are automatically [workletized](/docs/fundamentals/glossary#to-workletize) and ran on the [UI thread](/docs/fundamentals/glossary#ui-thread).
+- Callbacks passed to the `prepare` and `result` arguments are automatically [workletized](/docs/fundamentals/glossary#to-workletize) and run on the [UI thread](/docs/fundamentals/glossary#ui-thread).
 
-- You can technically react to any stateful React value using `useAnimatedReaction` but you should most probably use a `useEffect` for that instead.
+- You can technically react to any stateful React value using `useAnimatedReaction` but you should probably use a `useEffect` for that instead.
 
 ## Platform compatibility
 
