--- a/docs/docs/layout-animations/custom-animations.mdx
+++ b/docs/docs/layout-animations/custom-animations.mdx
@@ -228,7 +228,7 @@ function Box({ label, state }: { label: string, state: boolean }) {
   );
 }
 
-export function CustomLayoutTransitionExample(): React.ReactElement {
+export function CustomLayoutTransitionExample() {
   const [state, setState] = useState(true);
   return (
     <View style={{ marginTop: 30 }}>
