comma instead of semicolon

--- a/docs/docs/core/useAnimatedStyle.mdx
+++ b/docs/docs/core/useAnimatedStyle.mdx
@@ -19,7 +19,7 @@ function App() {
   // highlight-next-line
   const animatedStyles = useAnimatedStyle(() => {
     return {
-      opacity: sv.value ? 1 : 0;
+      opacity: sv.value ? 1 : 0,
     };
   // highlight-next-line
   });
