--- a/docs/docs/guides/troubleshooting.mdx
+++ b/docs/docs/guides/troubleshooting.mdx
@@ -22,7 +22,7 @@ All of them are supposed to work correctly only within the same minor version. T
 
 This can happen when:
 
-1. Part of your code is transpiled with Reanimated Babel plugin that wasn't injecting its version yet. See [Mismatch between JavaScript code version and Reanimated Babel plugin version](http://localhost:3000/react-native-reanimated/docs/guides/Troubleshooting#mismatch-between-javascript-code-version-and-reanimated-babel-plugin-version).
+1. Part of your code is transpiled with Reanimated Babel plugin that wasn't injecting its version yet. See [Mismatch between JavaScript code version and Reanimated Babel plugin version](https://docs.swmansion.com/react-native-reanimated/docs/guides/Troubleshooting#mismatch-between-javascript-code-version-and-reanimated-babel-plugin-version).
 2. You use release bundle with debug build of the app. This is not supported. See this [post](https://github.com/software-mansion/react-native-reanimated/issues/4737) for more information about it.
 
 ### Mismatch between JavaScript code version and Reanimated Babel plugin version
@@ -93,7 +93,7 @@ function caller(){
 }
 ```
 
-Check [this page](http://localhost:3000/react-native-reanimated/docs/fundamentals/glossary#worklet) to learn more about Reanimated and its worklets.
+Check [this page](https://docs.swmansion.com/react-native-reanimated/docs/fundamentals/glossary#worklet) to learn more about Reanimated and its worklets.
 
 ## Initialization issues
 
