--- a/docs/docs/animations/withTiming.mdx
+++ b/docs/docs/animations/withTiming.mdx
@@ -31,6 +31,7 @@ type AnimatableValue = number | string | number[];
 interface WithTimingConfig {
   duration?: number;
   easing?: EasingFunction;
+  reduceMotion?: ReduceMotion;
 }
 
 function withTiming<T extends AnimatableValue>(
@@ -38,6 +39,12 @@ function withTiming<T extends AnimatableValue>(
   config?: WithTimingConfig,
   callback?: (finished?: boolean, current?: AnimatableValue) => void
 ): T;
+
+enum ReduceMotion {
+  System = 'system',
+  Always = 'always',
+  Never = 'never',
+}
 ```
 
 </details>
@@ -58,10 +65,11 @@ import { useTimingPlayground } from '@site/src/components/InteractivePlayground'
 
 Available properties:
 
-| Name                  | Type     | Default                     | Description                                           |
-| --------------------- | -------- | --------------------------- | ----------------------------------------------------- |
-| duration <Optional /> | `number` | 300                         | Length of the animation (in milliseconds).            |
-| easing <Optional />   | `Easing` | `Easing.inOut(Easing.quad)` | An easing function which defines the animation curve. |
+| Name                      | Type           | Default                     | Description                                                                                                    |
+| ------------------------- | -------------- | --------------------------- | -------------------------------------------------------------------------------------------------------------- |
+| duration <Optional />     | `number`       | 300                         | Length of the animation (in milliseconds).                                                                     |
+| easing <Optional />       | `Easing`       | `Easing.inOut(Easing.quad)` | An easing function which defines the animation curve.                                                          |
+| reduceMotion <Optional /> | `ReduceMotion` | `ReduceMotion.System`       | A parameter that determines how the animation responds to the device's `Reduced Motion` accessibility setting. |
 
 ##### `Easing`
 
